--- a/src/main/webapp/pages/OrderManagement/OrderManagement.css
+++ b/src/main/webapp/pages/OrderManagement/OrderManagement.css
@@ -20,9 +20,9 @@
 
 input.form-control.app-textbox.app-dateinput.display-input {
     width : unset !important;
+    height: 2.15em;
 }
 
 .wm-app .app-input-wrapper, .wm-app .app-select-wrapper {
     display: block !important;
 }
-
